# rdra-ish-dsl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  out.mmd  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
crates/rdra-cli/: Cargo.toml
crates/rdra-cli/src/: main.rs
crates/rdra-core/: Cargo.toml
crates/rdra-core/src/: analysis.rs  diagnostics.rs  model.rs  resolver.rs  state_pattern.rs  tx.rs
crates/rdra-core/tests/: integration_test.rs
crates/rdra-core/tests/snapshots/: integration_test__purchase_fixture_er_snapshot.snap
crates/rdra-emit/: Cargo.toml
crates/rdra-emit/src/: csv.rs  lib.rs  mermaid.rs  plantuml.rs  state_pattern.rs
crates/rdra-emit/src/snapshots/: rdra_emit__plantuml__tests__er_plantuml_snapshot.snap  rdra_emit__state_pattern__tests__order_states_csv_snapshot.snap  rdra_emit__state_pattern__tests__order_states_json_snapshot.snap
crates/rdra-ish-cli/: Cargo.toml
crates/rdra-ish-cli/src/: cli.rs  cli_tests.rs  csv_cmd.rs  diagram.rs  export.rs  fmt_cmd.rs  list_output.rs  load.rs  main.rs  states.rs  verify.rs
crates/rdra-ish-cli/src/list_output/: access.rs  elements.rs  mod.rs  node_ref.rs  render.rs
crates/rdra-ish-core/: Cargo.toml
crates/rdra-ish-core/src/: access.rs  analysis.rs  analysis_diag.rs  concept_mapping.rs  diagnostics.rs  entity_lifecycle.rs  entity_state_variant.rs  event_flow.rs  import_scope.rs  lib.rs  lint.rs  location.rs  model.rs  predicate.rs  resolver.rs  state_pattern.rs  system.rs  tx.rs  typed_predicate.rs  workspace.rs
crates/rdra-ish-core/src/analysis/: arg_resolve.rs  comparison.rs  constraint.rs  effect.rs  fk.rs  instance.rs  integration_tests.rs  metadata.rs  mod.rs  nodes.rs  predicate_process.rs  property.rs  qref_util.rs
crates/rdra-ish-core/src/analysis/integration_tests/: build_model.rs  comparison.rs  constraint.rs  diagnostics.rs  instance.rs  mod.rs  nodes.rs  predicate.rs  support.rs
crates/rdra-ish-core/src/model/: comparison.rs  constraints.rs  effects.rs  instances.rs  keys.rs  mod.rs  refs.rs  symbol.rs  typed.rs
crates/rdra-ish-core/tests/: integration_test.rs
crates/rdra-ish-core/tests/snapshots/: integration_test__purchase_fixture_entity_csv_snapshot.snap  integration_test__purchase_fixture_er_snapshot.snap
crates/rdra-ish-emit/: Cargo.toml
crates/rdra-ish-emit/src/: asyncapi.rs  csv.rs  dbml.rs  diff.rs  json_schema.rs  lib.rs  mermaid.rs  openapi.rs  plantuml.rs  state_pattern.rs  tla.rs  typescript.rs
crates/rdra-ish-emit/src/snapshots/: rdra_ish_emit__csv__tests__entity_csv_snapshot.snap  rdra_ish_emit__mermaid__tests__er_mermaid_snapshot.snap  rdra_ish_emit__plantuml__tests__er_plantuml_snapshot.snap  rdra_ish_emit__plantuml__tests__sequence_fk_group_and_singleton.snap  rdra_ish_emit__state_pattern__tests__order_states_csv_snapshot.snap  rdra_ish_emit__state_pattern__tests__order_states_json_snapshot.snap  rdra_ish_emit__state_pattern__tests__order_states_table_snapshot.snap  rdra_ish_emit__tla__tests__order_cfg.snap  rdra_ish_emit__tla__tests__tla_order_snapshot.snap  rdra_ish_emit__typescript__tests__typescript_state_union_snapshot.snap
crates/rdra-ish-lsp/: Cargo.toml
crates/rdra-ish-lsp/src/: backend.rs  code_actions.rs  code_lens.rs  completion.rs  convert.rs  document.rs  folding.rs  hover.rs  inlay_hints.rs  lib.rs  linked_editing.rs  main.rs  predicates.rs  refs.rs  rename.rs  semantic_tokens.rs  symbols.rs  uri.rs  workspace_test.rs
crates/rdra-ish-render/: Cargo.toml
crates/rdra-ish-render/src/: lib.rs
crates/rdra-ish-syntax/: Cargo.toml
crates/rdra-ish-syntax/src/: ast.rs  format.rs  lib.rs  parse_error.rs  parser.rs  token.rs
crates/rdra-ish-syntax/src/snapshots/: rdra_ish_syntax__parser__tests__parse_entity.snap  rdra_ish_syntax__parser__tests__parse_full_snippet.snap  rdra_ish_syntax__parser__tests__parse_import.snap  rdra_ish_syntax__parser__tests__parse_instance_decl.snap  rdra_ish_syntax__parser__tests__parse_predicate.snap  rdra_ish_syntax__parser__tests__parse_relate.snap
crates/rdra-render/: Cargo.toml
crates/rdra-syntax/: Cargo.toml
crates/rdra-syntax/src/: lib.rs  token.rs
docs/: cli-reference.md  clinic-ops-design-sample.md  diagram-sample-review.md  formal-verification.md  incremental-modeling.md  language-reference.md  rdra-ish-interpretation.md  state-derivation.md
editors/vscode/: .vscodeignore  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: rdra.tmLanguage.json
samples/api-contract/src/: model.rdra
samples/clinic-ops/: design-sample.md
samples/clinic-ops/buc/: buc_appointment_scheduling.rdra  buc_billing_claims.rdra  buc_clinical_encounter.rdra  buc_followup_care.rdra  buc_orders_results.rdra  buc_patient_onboarding.rdra  buc_prescription_fulfillment.rdra  buc_staff_admin.rdra  buc_visit_checkin.rdra
samples/clinic-ops/shared/: access.rdra  actors.rdra  biz.rdra  entities.rdra
samples/ec-site/buc/: buc_cart.rdra  buc_order.rdra  buc_payment.rdra
samples/ec-site/shared/: actors.rdra  biz.rdra  entities.rdra
samples/formal-verification/: README.md  cross_order_payment.rdra  int_stock.rdra  now_coupon.rdra  order.rdra  quantifier_none.rdra
samples/formal-verification-fail/: README.md  order.rdra
samples/incremental-order/: README.md
samples/incremental-order/step-0-scope/: design.md  requirements-analysis.md
samples/incremental-order/step-1-buc-skeleton/: design.md  requirements-analysis.md
samples/incremental-order/step-2-data-touchpoints/: design.md  requirements-analysis.md
scripts/: check-sample-artifacts.sh  install-tlc.sh
skills/: README.md  rdra-buc-analyze.md  rdra-buc-create.md  rdra-buc-update.md  rdra-diagram.md  rdra-ish-review.md  rdra-ish-write.md
skills/rdra-ish-buc-analyze/: SKILL.md
skills/rdra-ish-buc-create/: SKILL.md
skills/rdra-ish-buc-update/: SKILL.md
skills/rdra-ish-diagram/: SKILL.md
skills/rdra-ish-review/: SKILL.md
skills/rdra-ish-verify/: SKILL.md
skills/rdra-ish-write/: SKILL.md
(+74 files in other folders)
