[workspace]
resolver = "2"
members = [
    "crates/rdra-ish-syntax",
    "crates/rdra-ish-core",
    "crates/rdra-ish-emit",
    "crates/rdra-ish-render",
    "crates/rdra-ish-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.3"
authors = ["rdra-ish-dsl contributors"]
license = "MIT"
repository = "https://github.com/manji-0/rdra-ish-dsl"
description = "RDRA-inspired DSL compiler and diagram generator"

[workspace.dependencies]
# parser
logos        = "0.14"
chumsky      = "0.9"
# diagnostics
miette       = { version = "7", features = ["fancy"] }
thiserror    = "2"
# model
slotmap      = "1"
petgraph     = "0.6"
# emit
csv          = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
# cli
clap         = { version = "4", features = ["derive"] }
anyhow       = "1"
# file
walkdir      = "2"
# encoding / compression (optional, used by rdra-ish-render kroki feature)
base64       = "0.22"
flate2       = "1"
# test
insta        = { version = "1", features = ["toml"] }
tempfile     = "3"
