[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "rdra-ish"
version = "0.1.7"
description = "RDRA-inspired DSL compiler and diagram generator"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "rdra-ish-dsl contributors" }]
keywords = ["rdra", "dsl", "requirements", "mermaid", "plantuml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/manji-0/rdra-ish-dsl"
Repository = "https://github.com/manji-0/rdra-ish-dsl"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/rdra-ish-cli/Cargo.toml"
profile = "release"
strip = true
include = [
    { path = "Cargo.toml", format = ["sdist", "wheel"] },
    { path = "Cargo.lock", format = "sdist" },
    { path = "crates/**/*", format = "sdist" },
    { path = "docs/**/*", format = "sdist" },
    { path = "samples/**/*", format = "sdist" },
    { path = "skills/**/*", format = "sdist" },
    { path = "README.md", format = ["sdist", "wheel"] },
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "LICENSE", format = ["sdist", "wheel"] },
]
