[package]
name = "rdra-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rdra"
path = "src/main.rs"

[dependencies]
rdra-syntax = { path = "../rdra-syntax" }
rdra-core   = { path = "../rdra-core" }
rdra-emit   = { path = "../rdra-emit" }
rdra-render = { path = "../rdra-render" }
clap        = { workspace = true }
anyhow      = { workspace = true }
walkdir     = { workspace = true }
miette      = { workspace = true }
serde_json  = { workspace = true }
