[package]
name = "rdra-emit"
version.workspace = true
edition.workspace = true

[dependencies]
rdra-core  = { path = "../rdra-core" }
csv        = { workspace = true }
thiserror  = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta        = { workspace = true }
rdra-syntax  = { path = "../rdra-syntax" }
