[package]
name = "rdra-ish-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
logos   = { workspace = true }
chumsky = { workspace = true }
miette  = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
